crates/biome_js_analyze/tests/specs/nursery/noExcessiveClassesPerFile/valid/single-class.js
/* should not generate diagnostics */
class ValidClass { }
