crates/biome_js_analyze/tests/specs/nursery/noExcessiveClassesPerFile/invalid/edge-cases.js
/* should generate diagnostics */
class Outer {
	method() {
		class Inner { }
	}
}

(function() {
	return class Foo { };
})();
